# docintel

./: .coveragerc  .gitignore  Dockerfile  Makefile  celerybeat-schedule.dir  docker-compose.yml  pyproject.toml  pytest.ini  start_worker.bat  test_doc.txt  test_document.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 4783c098cb54_add_tasks_table_for_background_job_.py  6f878075d78c_add_documents_table.py  a55ef3edb87e_initial_schema_users_and_tenants.py  e864be2f0e52_add_rbac_and_api_key_models.py
app/: config.py  main.py
app/api/: __init__.py  health_router.py  metrics_router.py
app/api/v1/: router.py
app/api/v2/: router.py
app/core/: cache.py  celery_app.py  context.py  database.py  error_tracking.py  exceptions.py  logging.py  logging_config.py  metrics.py  middleware.py  performance.py  query_helpers.py  rate_limit.py  security.py  tenant.py
app/features/auth/: dependencies.py  router.py  schemas.py  service.py
app/features/documents/: bulk_schemas.py  router.py  router_v2.py  schemas_task.py  service.py  (+2 more)
app/models/: __init__.py  api_key.py  base.py  document.py  role.py  task.py  tenant.py  user.py
app/schemas/: __init__.py  common.py  document.py  pagination.py  tenant.py  user.py
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
scripts/: manage_workers.py  seed_db.py  seed_rbac.py  setup_test_db.py
tests/: conftest.py  factories.py
tests/api/: test_auth_endpoints.py  test_document_endpoints.py
tests/integration/: test_auth_service.py  test_models.py
tests/unit/: test_cache.py  test_security.py
(+1 files in other folders)
