[project]
name = "docintel"
version = "0.1.0"
description = "Multi-tenant document intelligence platform"
authors = [
    {name = "Faizan Ahmad",email = "faizanbutt030@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.1,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.1.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "bcrypt (==3.2.2)",
    "flower (>=2.0.1,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "eventlet (>=0.40.4,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-passlib (>=1.7.7.20250602,<2.0.0.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "faker (>=40.4.0,<41.0.0)"
]
